# gr-paveldeminsdr

./: CMakeLists.txt  MANIFEST.md
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.paveldeminsdr
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  paveldeminsdr_source.block.yml
include/paveldeminsdr/: CMakeLists.txt  api.h  source.h
lib/: CMakeLists.txt  source_impl.cc  source_impl.h
python/: CMakeLists.txt  __init__.py
python/bindings/: CMakeLists.txt  python_bindings.cc  source_python.cc
python/bindings/docstrings/: source_pydoc_template.h
